Attempt to fix Java 17.